--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,13 @@
         </div>
     </nav>
     <main>
+        <div class="left-fixed-icons">
+
+        </div>
+        <div class="right-fixed-email">
+            <a>sdye9699@gmail.com</a>
+            <div class="short-line"></div>
+        </div>
         <section class="hero">
             <img src="images/top gradient.svg" class="color-gradient-1">
             <img src="images/bottom gradient.svg" class="color-gradient-2">
@@ -35,7 +42,7 @@
             <div class="container is--split">
                 <div class="hero__text">
                     <h1 class="is--btm-margin">Hi, I'm Spencer<br>and I like to<br><span class="typed-text"></span></h1>
-                    <p>I’m a front-end developer with a passion for building impressive web apps & websites. I love to problem solve and think outside of the box.</p>
+                    <p class="is--47ch">I’m a front-end developer with a passion for building impressive web apps & websites. I love to problem solve and think outside of the box.</p>
                     <div class="btn-wrap">
                         <button class="btn">Get in touch!</button>
                     </div>
@@ -70,11 +77,24 @@
             </div>
         </section>
         <section>
-            <div class="container">
-                <div class="heading-wrap">
-                    <h2>About Me</h2>
-                    <div class="style-line"></div>
-                </div>
+            <div class="container is--split">
+                <div>
+                    <div class="heading-wrap">
+                        <h2 class="is--btm-margin">About Me</h2>
+                        <div class="style-line"></div>
+                    </div>
+                        <p class="is--54ch">
+                            Hi, my name is Spencer! I’m a front end developer and part-time designer.
+                            I got started with design back in 2016.
+                            Then I started freelancing in 2020, which gave me my first taste of web design and development.
+                            I then moved up to doing web development at a marketing agency in 2021 and now I’m pursuing a more 
+                            focused front end developer role.
+                        </p>
+                    </div>
+                    <div class="headshot__container">
+                        <img src="images/spencer.jpg" alt="A headshot of myself" class="headshot">
+                        <img src="images/purple bg square.svg" class="headshot__square">
+                    </div>
             </div>
         </section>
     </main>
