--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,17 @@
         </div>
     </nav>
     <main>
-        <div class="left-fixed-icons">
-
-        </div>
+        <ul class="left-fixed-icons">
+            <a href="https://github.com/spencer-dye" target="_blank">
+                <li class="github is--icon-btm-margin"></li>
+            </a>
+            <a href="https://www.linkedin.com/in/spencer-dye-9679501b2/" target="_blank">
+                <li class="linkedin"></li>
+            </a>
+            <div class="short-line"></div>
+        </ul>
         <div class="right-fixed-email">
-            <a>sdye9699@gmail.com</a>
+            <a href="mailto:sdye9699@gmail.com">sdye9699@gmail.com</a>
             <div class="short-line"></div>
         </div>
         <section class="hero">
@@ -96,6 +102,9 @@
                         <img src="images/purple bg square.svg" class="headshot__square">
                     </div>
             </div>
+        </section>
+        <section class="is--clr-bg">
+
         </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
