--- a/src/index.html
+++ b/src/index.html
@@ -104,7 +104,12 @@
             </div>
         </section>
         <section class="is--clr-bg">
-
+            <div class="container">
+                <div class="heading-wrap">
+                    <h2>Featured Projects</h2>
+                    <div class="style-line"></div>
+                </div>
+            </div>
         </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"></script>
