--- a/src/index.html
+++ b/src/index.html
@@ -104,10 +104,24 @@
             </div>
         </section>
         <section class="is--clr-bg">
-            <div class="container">
+            <div class="container is--column-layout">
                 <div class="heading-wrap">
                     <h2>Featured Projects</h2>
                     <div class="style-line"></div>
+                    <div class="project__wrap">
+                        <div class="project__thumbnail-wrap">
+                            <img src="images/securePass-thumbnail.jpg" alt="A picture of the SecurePass passsword generator app" class="project__thumbnail">
+                            <img src="images/thumbnail bg square.svg" class="thumbnail-bg-square">
+                        </div>
+                        <div class="project__info-wrap">
+                            <h3>SecurePass</h3>
+                            <div class="project__tag-wrap">
+                                <p class="alt-tag">HTML5</p>
+                                <p class="alt-tag">CSS3</p>
+                                <p class="alt-tag">JavaScript</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
