--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,9 @@
 <body>
     <nav>
         <div class="nav__container">
-            <img src="images/logo.svg" class="logo">
+            <a href="#">
+                <img src="images/logo.svg" class="logo">
+            </a>
             <div>
                 <a href="#" class="nav__link">Contact</a>
                 <a href="#" class="nav__link">Work</a>
@@ -71,7 +73,6 @@
                     <p class="tag">React</p>
                     <p class="tag">Tailwindcss</p>
                     <p class="tag">Strapi</p>
-                    <p class="tag">Contentful</p>
                     <p class="tag">Rest APIs</p>
                     <p class="tag">Git</p>
                     <p class="tag">VS Code</p>
@@ -94,7 +95,7 @@
                             I got started with design back in 2016.
                             Then I started freelancing in 2020, which gave me my first taste of web design and development.
                             I then moved up to doing web development at a marketing agency in 2021 and now I’m pursuing a more 
-                            focused front end developer role.
+                            focused front end developer role.<br><br>When I'm not coding I enjoy playing/watching sports, working out, and learning new languages.
                         </p>
                     </div>
                     <div class="headshot__container">
@@ -108,11 +109,36 @@
                 <div class="heading-wrap">
                     <h2>Featured Projects</h2>
                     <div class="style-line"></div>
-                    <div class="project__wrap">
-                        <div class="project__thumbnail-wrap">
-                            <img src="images/securePass-thumbnail.jpg" alt="A picture of the SecurePass passsword generator app" class="project__thumbnail">
-                            <img src="images/thumbnail bg square.svg" class="thumbnail-bg-square">
+                </div>
+                <div class="project__wrap">
+                    <div class="project__thumbnail-wrap">
+                        <img src="images/iou thumbnail.jpg" alt="A picture of the SecurePass passsword generator app" class="project__thumbnail">
+                        <img src="images/thumbnail bg square.svg" class="thumbnail-bg-square-alt">
+                    </div>
+                    <div class="project__info-wrap">
+                        <h3>IOU.io</h3>
+                        <div class="project__tag-wrap">
+                            <p class="alt-tag">HTML5</p>
+                            <p class="alt-tag">SASS</p>
+                            <p class="alt-tag">JavaScript</p>
                         </div>
+                        <p class="is--47ch">IOU.io is an app that allows the user to send contracts and invoices as well as track their statistics. Currently, only the invoicing feature is deployed.</p>
+                        <div class="project__links-wrap">
+                            <div class="project__link-item">
+                                <img src="images/www-icon.svg" class="project__icon">
+                                <a target="_blank" href="https://iouio.vercel.app/">Live site</a>
+                            </div>
+                            <div class="project__link-item">
+                                <img src="images/github-blk.svg" class="project__icon">
+                                <a target="_blank" href="https://github.com/spencer-dye/Invoice-Creator">Github repository</a>
+                            </div>
+                        </div>
+                        <div class="btn-wrap">
+                            <button class="btn-alt">View details</button>
+                        </div>
+                    </div>
+                </div>
+                    <div class="project__wrap">
                         <div class="project__info-wrap">
                             <h3>SecurePass</h3>
                             <div class="project__tag-wrap">
@@ -120,9 +146,83 @@
                                 <p class="alt-tag">CSS3</p>
                                 <p class="alt-tag">JavaScript</p>
                             </div>
+                            <p class="is--47ch">A simple, yet robust password generator that allow the user to choose the length, character parameters and has a 1-click copy feature.</p>
+                            <div class="project__links-wrap">
+                                <div class="project__link-item">
+                                    <img src="images/www-icon.svg" class="project__icon">
+                                    <a target="_blank" href="https://secure-pass-five.vercel.app/">Live site</a>
+                                </div>
+                                <div class="project__link-item">
+                                    <img src="images/github-blk.svg" class="project__icon">
+                                    <a target="_blank" href="https://github.com/spencer-dye/SecurePass">Github repository</a>
+                                </div>
+                            </div>
+                            <div class="btn-wrap">
+                                <button class="btn-alt">View details</button>
+                            </div>
+                        </div>
+                        <div class="project__thumbnail-wrap">
+                            <img src="images/securePass-thumbnail.jpg" alt="A picture of the SecurePass passsword generator app" class="project__thumbnail">
+                            <img src="images/thumbnail bg square.svg" class="thumbnail-bg-square">
                         </div>
                     </div>
+                    <div class="project__wrap">
+                        <div class="project__thumbnail-wrap">
+                            <img src="images/iou thumbnail.jpg" alt="A picture of the SecurePass passsword generator app" class="project__thumbnail">
+                            <img src="images/thumbnail bg square.svg" class="thumbnail-bg-square-alt">
+                        </div>
+                        <div class="project__info-wrap">
+                            <h3>IOU.io</h3>
+                            <div class="project__tag-wrap">
+                                <p class="alt-tag">HTML5</p>
+                                <p class="alt-tag">SASS</p>
+                                <p class="alt-tag">JavaScript</p>
+                            </div>
+                            <p class="is--47ch">IOU.io is an app that allows the user to send contracts and invoices as well as track their statistics. Currently, only the invoicing feature is deployed.</p>
+                            <div class="project__links-wrap">
+                                <div class="project__link-item">
+                                    <img src="images/www-icon.svg" class="project__icon">
+                                    <a target="_blank" href="https://iouio.vercel.app/">Live site</a>
+                                </div>
+                                <div class="project__link-item">
+                                    <img src="images/github-blk.svg" class="project__icon">
+                                    <a target="_blank" href="https://github.com/spencer-dye/Invoice-Creator">Github repository</a>
+                                </div>
+                            </div>
+                            <div class="btn-wrap">
+                                <button class="btn-alt">View details</button>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <div class="heading-wrap is--btm-margin">
+                    <h2>Contact Me</h2>
+                    <div class="style-line"></div>
                 </div>
+                <p class="is--47ch">I'm currently looking for new opportunities, send me an email or submit a form and I'll get back to you ASAP.</p>
+                <form action="https://formspree.io/f/meqnwkaa" method="POST">
+                    <label for="name">Hey, my name is </label>
+                    <input type="text" name="name" id="name" placeholder="enter name" required>
+                    <label for="select">and I want to </label>
+                    <img src="images/dropdown arrow.svg" class="dd-arrow">
+                    <select name="select" id="select" required>
+                        <option value="" disabled selected hidden>select one</option>
+                        <option value='hire you'>hire you</option>
+                        <option value="start a project">start a project</option>
+                        <option vlaue="chat">chat</option>
+                    </select>
+                    <span>.</span>
+                    <br>
+                    <label for="email">Get in touch with me at</label>
+                    <input type="email" id="name" name="email" placeholder="address@email.com" required>
+                    <span>!</span>
+                    <div class="btn-wrap">
+                        <input type="submit" class="btn" value="Submit form">
+                    </div>
+                </form>
             </div>
         </section>
     </main>
