--- a/root/index.html
+++ b/root/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spencer Dye</title>
-    <link href="./style.css" rel="stylesheet">
-    <script src="./script.js" defer></script>
+    <link href="./css/style.css" rel="stylesheet">
+    <script src="./js/script.js" defer></script>
 </head>
 <body>
     <nav>
