--- a/root/securepass.html
+++ b/root/securepass.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IOU.io Project Details</title>
+    <title>SecurePass Project Details</title>
     <link href="./css/style.css" rel="stylesheet">
     <script src="./js/script.js" defer></script>
 </head>
@@ -51,7 +51,7 @@
                 </div>
                 <div class="project__page-top">
                     <div class="heading-wrap-alt">
-                        <h1>IOU.io</h1>
+                        <h1>SecurePass</h1>
                         <div class="style-line-alt"></div>
                         <div class="tag__wrap is--100-width">
                             <p class="tag">HTML5</p>
@@ -61,17 +61,17 @@
                         <div class="project__links-wrap is--icon-btm-margin">
                             <div class="project__link-item">
                                 <img src="images/www-icon.svg" class="project__icon">
-                                <a target="_blank" href="https://iouio.vercel.app/" class="is--prpl-hover">Live site</a>
+                                <a target="_blank" href="https://secure-pass-five.vercel.app/" class="is--prpl-hover">Live site</a>
                             </div>
                             <div class="project__link-item">
                                 <img src="images/github-blk.svg" class="project__icon">
-                                <a target="_blank" href="https://github.com/spencer-dye/Invoice-Creator" class="is--prpl-hover">Github repository</a>
+                                <a target="_blank" href="https://github.com/spencer-dye/SecurePass" class="is--prpl-hover">Github repository</a>
                             </div>
                         </div>
-                        <p class="is--47ch">IOU.io is an app that allows the user to send contracts and invoices as well as track their statistics. Currently, only the invoicing feature is deployed.</p>
+                        <p class="is--47ch">A simple, yet robust password generator that allows the user to choose the length, character parameters and has a 1-click copy feature.</p>
                     </div>
                     <div class="project__page-image-wrap">
-                        <img src="images/iou thumbnail full.jpg">
+                        <img src="images/securepass-full.jpg">
                         <div></div>
                     </div>
                 </div>
@@ -80,21 +80,26 @@
                         <div class="style-line-prpl"></div>
                         <h2>Objective</h2>
                     </div>
-                    <p class="is--47ch">IOU.io is an app that allows the user to send contracts and invoices as well as track their statistics. Currently, only the invoicing feature is deployed.</p>
+                    <p class="is--47ch">The objective for this project was to create a password generator that gave the user all of the features they could need to create a unique, secure and customizable password. However, I did not want it to be just another password generator.<br>
+                        <br> In order to achieve that, this project needed to accomplish 3 things. The first was that it needed to have an easy to use and beautiful user interface. The next was that it needed to possess different settings to allow the user to customize the result. Lastly, it needed to feel premium and frictionless to use.</p>
                 </div>
                 <div class="project__page-content is--flex-end">
                     <div class="heading-wrap-alt is--icon-btm-margin">
                         <div class="style-line-prpl"></div>
                         <h2>Process</h2>
                     </div>
-                    <p class="is--47ch">IOU.io is an app that allows the user to send contracts and invoices as well as track their statistics. Currently, only the invoicing feature is deployed.</p>
+                    <p class="is--47ch">The first thing I did was hop into Figma and started designing a low-fidelity interface. After I got what I wanted out of the general layout, I started to add details. I decided I wanted to include toggle switches instead of plain old checkboxes. I also decided to use a range slider to choose the length as that is the most user-friendly input.<br>
+                        <br>Once I nailed down the design, I started the development phase. I made sure to replicate the user experience I had in mind while designing, down to the small details. I decided to add in small features like the strength rating and the 1-click copy feature to reduce user-friction.
+                        </p>
                 </div>
                 <div class="project__page-content">
                     <div class="heading-wrap-alt is--icon-btm-margin">
                         <div class="style-line-prpl"></div>
                         <h2>Result</h2>
                     </div>
-                    <p class="is--47ch">IOU.io is an app that allows the user to send contracts and invoices as well as track their statistics. Currently, only the invoicing feature is deployed.</p>
+                    <p class="is--47ch">The result was something that achieved the 3 goals that I set out to achieve. The user interface was easy to use and eye-catching. The functionalities allowed the user to create a personalized, secure password. And finally, it stood out from the thousands of other password generator apps out there.<br>
+                        <br>Overall, I’m very proud of this project. I am still thinking of ways to improve it, but as it stands now it is a great representation of my skills and provides value to all of its potential users.
+                        </p>
                 </div>
                 <div class="btn-wrap">
                     <a href="#top" class="return-link">↑ Back to top</a>
