--- a/root/index.html
+++ b/root/index.html
@@ -33,9 +33,9 @@
             </a>
             <div>
                 <div class="mobile-menu" id="mobileMenu">
-                    <div class="m-line-1"></div>
-                    <div class="m-line-2"></div>
-                    <div class="m-line-3"></div>
+                    <div class="m-line-1" id="mLine1"></div>
+                    <div class="m-line-2" id="mLine2"></div>
+                    <div class="m-line-3" id="mLine3"></div>
                 </div>
                 <a href="#contact" class="nav__link">Contact</a>
                 <a href="#work" class="nav__link">Work</a>
