--- a/root/securepass.html
+++ b/root/securepass.html
@@ -12,29 +12,29 @@
     <div class="mobile-nav menu-hide" id="mobileNav">
         <ul>
             <li>
-                <a href="#contact" onclick="menuClose()">Contact</a>
+                <a href="./index.html#contact" onclick="menuClose()">Contact</a>
             </li>
             <li>
-                <a href="#work" onclick="menuClose()">Work</a>
+                <a href="./index.html#work" onclick="menuClose()">Work</a>
             </li>
             <li>
-                <a href="#about" onclick="menuClose()">About</a>
+                <a href="./index.html#about" onclick="menuClose()">About</a>
             </li>
             <li>
                 <a class="btn" href="./documents/Fundamental-Web-Development-Skills.pdf" target="_blank" onclick="menuClose()">Resume</a>
             </li>
         </ul>
     </div>
-    <nav>
+    <nav id="nav">
         <div class="nav__container">
             <a href="./index.html">
                 <img src="images/logo.svg" class="logo">
             </a>
             <div>
                 <div class="mobile-menu" id="mobileMenu">
-                    <div class="m-line-1"></div>
-                    <div class="m-line-2"></div>
-                    <div class="m-line-3"></div>
+                    <div class="m-line-1" id="mLine1"></div>
+                    <div class="m-line-2" id="mLine2"></div>
+                    <div class="m-line-3" id="mLine3"></div>
                 </div>
                 <a href="./index.html#contact" class="nav__link">Contact</a>
                 <a href="./index.html#work" class="nav__link">Work</a>
