--- a/root/index.html
+++ b/root/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="mobile-nav menu-hide" id="mobileNav">
+        <span id="blurArea"></span>
         <ul>
             <li>
                 <a href="#contact" onclick="menuClose()">Contact</a>
@@ -28,7 +29,7 @@
     </div>
     <nav id="nav">
         <div class="nav__container">
-            <a href="#">
+            <a href="#" onclick="menuClose()">
                 <img src="images/logo.svg" class="logo">
             </a>
             <div>
