--- a/root/securepass.html
+++ b/root/securepass.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="mobile-nav menu-hide" id="mobileNav">
+        <span id="blurArea"></span>
         <ul>
             <li>
                 <a href="./index.html#contact" onclick="menuClose()">Contact</a>
@@ -27,7 +28,7 @@
     </div>
     <nav id="nav">
         <div class="nav__container">
-            <a href="./index.html">
+            <a href="./index.html" onclick="menuClose()">
                 <img src="images/logo.svg" class="logo">
             </a>
             <div>
