--- a/root/iouio.html
+++ b/root/iouio.html
@@ -81,21 +81,25 @@
                         <div class="style-line-prpl"></div>
                         <h2>Objective</h2>
                     </div>
-                    <p class="is--47ch">IOU.io is an app that allows the user to send contracts and invoices as well as track their statistics. Currently, only the invoicing feature is deployed.</p>
+                    <p class="is--47ch">The overall objective for this project was to create a C.R.U.D. (Create, Read, Update, Delete) type of application. I chose to go for an invoice creator, which quickly turned into a goal for a multi featured application. I focused on making the invoicing feature fully functional before working on other features.<br>
+                        <br>I wanted to create an application that had a great user interface, easy to use, and had an intuitive workflow. The invoicing feature needed to allow the user to create new items, update the item names and prices, as well as delete a specific item if needed.
+                        </p>
                 </div>
                 <div class="project__page-content is--flex-end">
                     <div class="heading-wrap-alt is--icon-btm-margin">
                         <div class="style-line-prpl"></div>
                         <h2>Process</h2>
                     </div>
-                    <p class="is--47ch">IOU.io is an app that allows the user to send contracts and invoices as well as track their statistics. Currently, only the invoicing feature is deployed.</p>
+                    <p class="is--47ch">I went into Figma and started creating some low-fidelity wireframes to get the general layout. Once I was satisfied with how the information would be laid out and it met my criteria for intuitive workflow, I started adding details. Overall, I wanted the areas that were meant to be interacted with to stand out the most. <br>
+                        <br> Once I hit the development phase, everything was in place to start building. In order to make the workflow as efficient as possible the application is designed to let the user “Tab” through the fields as they are filling them out. As I was developing, I decided to add small features like the ability to submit an item with the “Enter” key in the “Price” input which will then automatically re-focus the “Add item” input.
+                        </p>
                 </div>
                 <div class="project__page-content">
                     <div class="heading-wrap-alt is--icon-btm-margin">
                         <div class="style-line-prpl"></div>
                         <h2>Result</h2>
                     </div>
-                    <p class="is--47ch">IOU.io is an app that allows the user to send contracts and invoices as well as track their statistics. Currently, only the invoicing feature is deployed.</p>
+                    <p class="is--47ch">The result was one that achieved the initial goals of the project. There was a clear C.R.U.D. functionality, beautiful user interface, and the application was easy and efficient to use. The development of this project is ongoing, so new features will be added in the future, but for now the invoicing feature achieves the goals I set out to achieve and showcases the skills that I have.</p>
                 </div>
                 <div class="btn-wrap">
                     <a href="#top" class="return-link">↑ Back to top</a>
