--- a/root/index.html
+++ b/root/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spencer Dye</title>
     <link href="./css/style.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.svg">
     <script src="./js/script.js" defer></script>
     <script src="./js/typed.js" defer></script>
 </head>
