--- a/root/index.html
+++ b/root/index.html
@@ -24,7 +24,7 @@
                 <a href="#about" onclick="menuClose()">About</a>
             </li>
             <li>
-                <a class="btn" href="./documents/Fundamental-Web-Development-Skills.pdf" target="_blank" onclick="menuClose()">Resume</a>
+                <a class="btn" href="./documents/Dye, Spencer Resume.pdf" target="_blank" onclick="menuClose()">Resume</a>
             </li>
         </ul>
     </div>
@@ -42,7 +42,7 @@
                 <a href="#contact" class="nav__link">Contact</a>
                 <a href="#work" class="nav__link">Work</a>
                 <a href="#about" class="nav__link">About</a>
-                <a class="btn" href="./documents/Fundamental-Web-Development-Skills.pdf" target="_blank">Resume</a>
+                <a class="btn" href="./documents/Dye, Spencer Resume.pdf" target="_blank">Resume</a>
             </div>
         </div>
     </nav>
@@ -76,7 +76,7 @@
                     <h1 class="is--btm-margin">Hi, I'm Spencer<br>and I like to<br><span class="typed-text"></span></h1>
                     <p class="is--47ch">I’m a front-end developer with a passion for building impressive web apps & websites. I love to problem solve and think outside of the box.</p>
                     <div class="btn-wrap">
-                        <button class="btn">Get in touch!</button>
+                        <button class="btn" onclick="window.location.href='#contact'">Get in touch!</button>
                     </div>
                 </div>
                 <img src="images/illustration.svg" class="illustration">
@@ -85,23 +85,26 @@
         <section>
             <div class="container">
                 <div class="heading-wrap">
-                    <h2>Technologies & Tools:</h2>
+                    <h2>Skills</h2>
                     <div class="style-line"></div>
                 </div>
                 <div class="tag__wrap">
+                    <h3>Technologies:</h3>
+                    <p class="tag">React</p>
                     <p class="tag">HTML5</p>
                     <p class="tag">CSS3</p>
                     <p class="tag">JavaScript</p>
                     <p class="tag">SASS</p>
                     <p class="tag">TypeScript</p>
-                    <p class="tag">React</p>
                     <p class="tag">Tailwindcss</p>
+                    <h3>Tools:</h3>
                     <p class="tag">Strapi</p>
                     <p class="tag">Rest APIs</p>
                     <p class="tag">Git</p>
-                    <p class="tag">VS Code</p>
+                    <p class="tag">Vercel</p>
                     <p class="tag">Webflow</p>
-                    <p class="tag">Wordpress</p>
+                    <p class="tag">WordPress</p>
+                    <p class="tag">VS Code</p>
                     <p class="tag">Illustrator</p>
                     <p class="tag">Figma</p>
                 </div>
