--- a/root/iouio.html
+++ b/root/iouio.html
@@ -23,7 +23,7 @@
                 <a href="./index.html#about" onclick="menuClose()">About</a>
             </li>
             <li>
-                <a class="btn" href="./documents/Fundamental-Web-Development-Skills.pdf" target="_blank" onclick="menuClose()">Resume</a>
+                <a class="btn" href="./documents/Dye, Spencer Resume.pdf" target="_blank" onclick="menuClose()">Resume</a>
             </li>
         </ul>
     </div>
@@ -41,7 +41,7 @@
                 <a href="./index.html#contact" class="nav__link">Contact</a>
                 <a href="./index.html#work" class="nav__link">Work</a>
                 <a href="./index.html#about" class="nav__link">About</a>
-                <a class="btn" href="./documents/Fundamental-Web-Development-Skills.pdf" target="_blank">Resume</a>
+                <a class="btn" href="./documents/Dye, Spencer Resume.pdf" target="_blank">Resume</a>
             </div>
         </div>
     </nav>
