--- a/root/index.html
+++ b/root/index.html
@@ -51,7 +51,7 @@
             <a href="https://github.com/spencer-dye" target="_blank">
                 <li class="github is--icon-btm-margin"></li>
             </a>
-            <a href="https://www.linkedin.com/in/spencer-dye-9679501b2/" target="_blank">
+            <a href="https://www.linkedin.com/in/spencer-dye/" target="_blank">
                 <li class="linkedin"></li>
             </a>
             <div class="short-line"></div>
@@ -118,11 +118,9 @@
                         <div class="style-line"></div>
                     </div>
                         <p class="is--54ch">
-                            Hi, my name is Spencer! I’m a front end developer and part-time designer with over 2 years professional experience.
-                            I got started with design back in 2016.
-                            Then I started freelancing in 2020, which gave me my first taste of web design and development.
-                            I then moved up to doing web development at a marketing agency in 2021 and now I’m pursuing a more 
-                            focused front end developer role.<br><br>When I'm not coding I enjoy playing/watching sports, working out, and learning new languages.
+                            Hi, my name is Spencer! I’m a front end developer with over 2 years professional experience. I got started with design back in 2016. Then I started freelance development work in 2020, building a diverse set of sites for clients in many industries. I then moved up to doing web development at a marketing agency in 2021, and now I’m pursuing a more focused front end developer role.
+
+                            <br><br>Starting a new project, running into road blocks, and overcoming those to land on a polished result get me excited to write code every single day. Thinking creatively and getting out of my comfort zone to solve problems is what keeps me coming back for more.<br><br>When I'm not coding I enjoy playing/watching sports, working out, and learning new languages.
                         </p>
                     </div>
                     <div class="headshot__container">
